@@ -2,6 +2,11 @@
 
 6.02 - Not Released
 
+ - Fix Unicode handling in App::DocKnot::Spin::Thread methods.  Output to
+   files was handled correctly in most cases, but output to a scalar or to
+   standard output was not, nor was output to a file when the input was
+   generated by another program.
+
  - Fix processing of old-style pointers in docknot spin.
 
  - Fix import error when running docknot release.
